--- a/.github/workflows/azurefinal.yml
+++ b/.github/workflows/azurefinal.yml
@@ -19,6 +19,10 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      REPO: $REPO
+      APP: $APP
+      VERSION: $VERSION
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
