--- a/.github/workflows/azurefinal.yml
+++ b/.github/workflows/azurefinal.yml
@@ -19,11 +19,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    env:
-      REPO: $REPO
-      APP: $APP
-      VERSION: $VERSION
-
+    environment: azurefinal
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -43,6 +39,6 @@ jobs:
         
       - name: Run a multi-line script
         run: |
-          az acr login --name $REPO
+          docker login -u azurefinal -p ${{ secrets.PUSHPASS }} ruiriccarepo.azurecr.io
           docker build -t $REPO/$APP:$VERSION .
           docker push $REPO/$APP:$VERSION
